--- a/docs/team/oscarwang.adoc
+++ b/docs/team/oscarwang.adoc
@@ -47,6 +47,7 @@ include::../DeveloperGuide.adoc[tag=add]
 ---
 #Start of Extract [from: User Guide]#
 
+This enhancement does not contain external behavior that a user should know.
 
 #End of Extract#
 
@@ -54,7 +55,7 @@ include::../DeveloperGuide.adoc[tag=add]
 
 ==== Justification
 
-This feature serves as a precursor of the implementation for the user story: As an insurance agent, I can specify the provider-client relationship among my contacts.
+This feature serves as a precursor of the implementation for the user story: As an insurance agent, I can add an insurance to manage my clients according to the insurances they purchased.
 
 
 ==== Implementation
@@ -83,8 +84,8 @@ include::../UserGuide.adoc[tag=addli]
 
 ==== Justification
 
-This feature is an implementation of the user story: As an insurance agent, I can specify the provider-client relationship among my contacts.
-It is crucial for LISA to allow insurance agents to create insurances, a provider-client relationship in the contacts.
+This feature is an implementation of the user story: As an insurance agent, I can add an insurance to manage my clients according to the insurances they purchased.
+Therefore, it is crucial for LISA to allow insurance agents to add life insurances.
 
 ==== Implementation
 
